@@ -1,6 +1,8 @@
 			   XPCE ChangeLog
 			   ==============
 
+* ENHANCED: some issues in table-layout.
+
 VERSION 6.6.30, distributed with SWI-Prolog 5.6.30
 ==================================================
 
